<resources>
    <string name="app_name">TorgaiGym</string>
    <string name="action_settings">Настройки</string>
    <string name="title_activity_admins">Админ</string>

    <string name="day_1">Понедельник</string>
    <string name="day_2">Вторник</string>
    <string name="day_3">Среда</string>
    <string name="day_4">Четверг</string>
    <string name="day_5">Пятница</string>

    <string name="day_1_shrt">Пн</string>
    <string name="day_2_shrt">Вт</string>
    <string name="day_3_shrt">Ср</string>
    <string name="day_4_shrt">Чт</string>
    <string name="day_5_shrt">Пт</string>

    <string name="set_of_exercise">Комплекс</string>

    <!--actions-->
    <string name="action_no">Нет</string>
    <string name="action_yes">Да</string>
    <string name="action_save">Сохранить</string>
    <string name="action_continue">Продолжить</string>
    <string name="action_cancel">Отмена</string>

    <!--labels-->
    <string name="label_name">Название</string>
    <string name="label_desc">Описание</string>
    <string name="label_error_empty_text">Поле не может быть пустым!</string>
    <string name="label_add_exercise">Добавить упражнение</string>
    <string name="label_edit_exercise">Изменить упражнение</string>
    <string name="label_delete_exercise">Удалить упражнение</string>
    <string name="label_nav_other">Другие</string>
    <string name="nav_plan">План</string>
    <string name="nav_tabata">Табата</string>
    <string name="nav_share">Поделиться</string>
    <string name="share_text">Тренируйся вместе с нами!</string>
    <string name="navigation_drawer_open">Navigation open</string>
    <string name="navigation_drawer_close">Navigation close</string>

    <string name="t_1">T1</string>
    <string name="t_1_desc">Время работы (сек.)</string>
    <string name="t_2">T2</string>
    <string name="t_2_desc">Время отдыха (сек.)</string>
    <string name="tabata_rounds">Кол. раундов</string>
    <string name="in_development">Разрабатывается..</string>
    <string name="connect_to_the_internet">Чтобы увидеть ежедневные тренировки, подключитесь к интернету!</string>


</resources>
