<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_plan"
            android:icon="@drawable/ic_exposure_plus_1_black_24dp"
            android:title="@string/nav_plan" />
        <item
            android:id="@+id/nav_tabata"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/nav_tabata" />
    </group>

    <item android:title="@string/label_nav_other">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/nav_share" />
        </menu>
    </item>

</menu>
