<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        style="@style/RobotoTextViewStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/app_name"
        android:padding="5dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/t_1"
        style="@style/RobotoTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/t_1_desc"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/t_2"
        style="@style/RobotoTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/t_2_desc"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/tabata_rounds"
        style="@style/RobotoTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tabata_rounds"
        android:inputType="numberDecimal" />

</LinearLayout>