<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title"
        style="@style/RobotoTextViewStyle"
        android:layout_width="wrap_content"
        android:padding="5dp"
        android:layout_height="wrap_content"
        android:hint="@string/app_name"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/name"
        style="@style/RobotoTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_name" />

    <EditText
        android:id="@+id/desc"
        style="@style/RobotoTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/label_desc" />

</LinearLayout>